Fix transitions for hover of board users and dark mode background color

--- a/src/components/BoardHeader/BoardHeader.scss
+++ b/src/components/BoardHeader/BoardHeader.scss
@@ -32,7 +32,7 @@
 }
 @media (prefers-color-scheme: dark) {
   .info-block--hoverable:hover {
-    background-color: rgba(255, 0, 105, 0.08); // Ask designer for correct color
+    background-color: rgba(255, 0, 105, 0.15); // Ask designer for correct color
   }
 }
 
